@@ -1,4 +1,4 @@
-package questionnaireDemo;
+package com.example.questionnaire_demo;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,7 +11,9 @@ import com.example.questionnaire_demo.dto.GetQuestionnaire;
 import com.example.questionnaire_demo.service.QuestionnaireService;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 
-import java.util.List;
+import java.time.LocalDate;
+import java.time.Month;
+import java.util.Collections;
 
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
@@ -27,27 +29,23 @@ public class QuestionnaireControllerTest {
 
     @Test
     void getQuestionnaire_found_returnsOkWithJson() throws Exception {
-        // === ARRANGE ===
         Long questionnaireId = 1L;
         Long userId = 42L;
 
-        // Создаём тестовый DTO, который вернёт замоканный сервис
         GetQuestionnaire mockDto = new GetQuestionnaire(
-                questionnaireId, "Java Developer", userId, null,
-                null, false, null, true, "High", null, 3, "About me", "100$", List.of("img1.jpg")
+                questionnaireId, userId, "Строительство домов", LocalDate.of(2025, Month.JANUARY, 31),
+                true, "Бригада рабочих", false, null, null, 3, "About me", "100$", Collections.emptyList()
         );
 
-        // Программируем сервис: "при таком вызове верни этот DTO"
         when(questionnaireService.getQuestionnaireById(questionnaireId, userId))
                 .thenReturn(mockDto);
 
-        // === ACT & ASSERT ===
         mockMvc.perform(get("/questionnaires/{questionnaireId}", questionnaireId)
-                        .header("userId", userId) // Добавляем хедер
+                        .header("userId", userId)
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk()) // Проверяем статус 200
-                .andExpect(jsonPath("$.id").value(questionnaireId)) // Проверяем поле id в JSON
-                .andExpect(jsonPath("$.userId").value(userId)) // Проверяем поле userId
-                .andExpect(jsonPath("$.workCategories").value("Java Developer")); // Проверяем работу
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(questionnaireId))
+                .andExpect(jsonPath("$.userId").value(userId))
+                .andExpect(jsonPath("$.workCategories").value("Строительство домов"));
     }
 }
